descricaoFilme bug out of bounds
never gonna give u up

--- a/site/descricaoFilme.css
+++ b/site/descricaoFilme.css
@@ -1,34 +1,36 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 677px;
+  min-height: 812px;
 }
 
 .u-section-1 .u-group-1 {
   width: 546px;
-  min-height: 629px;
+  min-height: 734px;
   height: auto;
-  margin: 43px auto 5px;
+  margin: 43px auto 35px;
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 30px;
+  padding: 30px 27px 30px 30px;
+}
+
+.u-section-1 .u-text-1 {
+  width: 237px;
+  margin: 0 auto;
+}
+
+.u-section-1 .u-text-2 {
+  width: 156px;
+  margin: 7px auto 0;
 }
 
 .u-section-1 .u-image-1 {
   width: 185px;
   height: 277px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-1 .u-text-1 {
-  margin: -277px 40px 0 205px;
-}
-
-.u-section-1 .u-text-2 {
-  margin: 0 121px 0 205px;
+  margin: 13px auto 0;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 237px 5px 0;
+  margin: 43px 5px 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -37,7 +39,7 @@
   text-transform: uppercase;
   font-size: 0.875rem;
   letter-spacing: 1px;
-  margin: 26px auto 0;
+  margin: 15px auto 0;
 }
 
 @media (max-width: 1199px) {
@@ -45,16 +47,21 @@
     height: auto;
   }
 
-  .u-section-1 .u-image-1 {
-    height: 309px;
-  }
-
   .u-section-1 .u-text-1 {
-    margin-top: -275px;
+    margin-top: 105px;
   }
 
   .u-section-1 .u-text-2 {
     margin-right: 274px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 309px;
+    margin-top: -310px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 317px;
   }
 }
 
@@ -66,6 +73,14 @@
   .u-section-1 .u-text-2 {
     margin-right: 234px;
     margin-left: 249px;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-top: -346px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 353px;
   }
 }
 
@@ -87,6 +102,14 @@
     margin-right: 164px;
     margin-left: 196px;
   }
+
+  .u-section-1 .u-image-1 {
+    margin-top: -94px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 101px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -95,7 +118,6 @@
   }
 
   .u-section-1 .u-text-1 {
-    margin-right: 0;
     margin-left: 121px;
   }
 
@@ -104,7 +126,12 @@
     margin-left: 121px;
   }
 
+  .u-section-1 .u-image-1 {
+    margin-top: -110px;
+  }
+
   .u-section-1 .u-text-3 {
+    margin-top: 117px;
     margin-left: 0;
     margin-right: 0;
   }
